--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A CLI based ATM machine",
   "main": "index.js",
   "type": "module",
-  "bin" : "index.js",
+  "bin": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -13,6 +13,8 @@
   "dependencies": {
     "chalk-animation": "^2.0.3",
     "chalk-rainbow": "^1.0.0",
+    "cli-spinners": "^2.9.2",
+    "date-time": "^4.0.0",
     "figlet": "^1.7.0",
     "inquirer": "^9.2.17"
   },
